@@ -1,5 +1,8 @@
 == Firebug Lite 1.2 Change Log ==
 
+2009-03-07 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
+  * firebug-lite.js: Issue 1566: Added firebug.env.targetWindow variable to hold target window
+
 2009-03-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Changed default for firebug.env.detectFirebug to false
                      Fixed issue 1555: Ajax calls ... we should not assume that the same domain policy is applied, use try catch instead
